--- a/home.html
+++ b/home.html
@@ -81,6 +81,10 @@
     <!-- Add this in the <head> section of your HTML file -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/push.js/1.0.8/push.min.js"></script>
+    <script async
+        src="https://storage.googleapis.com/promptly-static/77bd5641320cd1089397b78d680e04321a68afc8/static/js/embed-v1.js"></script>
+    <promptly-app-embed published-app-id="c82d05ad-1933-4d41-9e8b-4544ec39e271" chat-bubble="true"
+        host="https://trypromptly.com"></promptly-app-embed>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@elasticemail/elasticemail-client"></script> -->
 
 </body>
